# star-trajectory

./: .gitignore  LICENSE  PREDICTIONS.md  README.md  SPEC.md  calibration.json  classify.py  engine_cron.txt  mcp_server.py  predict.py  predictions.json  pyproject.toml  render.py  requirements.txt  run.py  score.py  server.json  watchdog.py
skill/: SKILL.md
